# zach.finance

./: .envrc  .gitignore  BUILD.bazel  ROADMAP.md  Tiltfile  WORKSPACE  qdr.yml  shell.nix  tilt_config.cue  tilt_config.json.example
.github/workflows/: deploy.yml
api.zach.finance/: BUILD.bazel  go.mod  go.sum  gqlgen.yml  server.go
api.zach.finance/api-gateway/: BUILD.bazel  deployment.yaml  gqlgen.yml  server.go
api.zach.finance/api-gateway/graph/: BUILD.bazel  asset.graphqls  asset.resolvers.go  generated.go  volatility.graphqls  volatility.resolvers.go
api.zach.finance/api-gateway/internal/asset/: BUILD.bazel  asset.go  fn.go
api.zach.finance/api-gateway/internal/model/: BUILD.bazel  volatility.go
api.zach.finance/api-gateway/internal/volatility/: BUILD.bazel  volatility.go
api.zach.finance/graph/: asset.resolvers.go  generated.go  volatility.resolvers.go
api.zach.finance/internal/asset/: asset.go  yahoo.go
api.zach.finance/internal/model/: asset.go
api.zach.finance/internal/volatility/: volatility.go
ci/: shell.nix
k8s/: registry_deployment.yaml
k8s/cue/: namespace.cue
tilt/: bazel.star  helper.star
tilt/resource/: bazel_k8s.star  configmap.star  external_services.star  k8s_misc.star
zach.finance/: .eslintrc.js  .gitignore  app.vue  codegen.ts  i18n.config.ts  index.html  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
zach.finance/components/: AssetSearch.vue  DollarIcon.vue  EtfData.vue  FinancialData.vue  FundamentalStock.vue  PERatioChart.vue  PortfolioForm.vue  PriceChart.vue  ScaleIcon.vue  SigninWidget.vue  StockData.vue  TimePeriodButton.vue  VolatilityChart.vue  VolatilityCharts.vue  VolatilityLines.vue  VolatilitySummaryBoxWhisker.vue
zach.finance/fn/: chart.ts  standard-deviation.ts
zach.finance/gql/: fragment-masking.ts  gql.ts  graphql.ts
zach.finance/graphql/: getAsset.graphql  getEtfData.graphql  getStock.graphql  getVolatility.graphql  portfolio.graphql  search.graphql  session.graphql  user.graphql
zach.finance/layouts/: default.vue
zach.finance/pages/: assets.vue  dividend.vue  financials.vue  index.vue  signin.vue  volatility.vue
zach.finance/pages/assets/: [symbols].vue
zach.finance/pages/etf/: [ticker].vue
zach.finance/pages/stock/: [ticker].vue
zach.finance/src/: App.vue  main.ts  vue.d.ts
zach.finance/src/components/: VolatilityChart.vue
zach.finance/src/functions/: chart.ts
zach.finance/src/gql/: gql.ts  graphql.ts
zach.finance/src/graphql/: getVolatility.graphql
zach.finance/store/: portfolio.ts  session.ts
