load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "asset.resolvers.go",
        "generated.go",
        "resolver.go",
        "volatility.resolvers.go",
    ],
    embedsrcs = [
        "asset.graphqls",
        "volatility.graphqls",
    ],
    importpath = "github.com/ZacxDev/zach.finance/api-gateway/graph",
    visibility = ["//visibility:public"],
    deps = [
        "//api.zach.finance/api-gateway/internal/asset:go_default_library",
        "//api.zach.finance/api-gateway/internal/model:go_default_library",
        "//api.zach.finance/api-gateway/internal/volatility:go_default_library",
        "@com_github_99designs_gqlgen//graphql:go_default_library",
        "@com_github_99designs_gqlgen//graphql/introspection:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_vektah_gqlparser_v2//:go_default_library",
        "@com_github_vektah_gqlparser_v2//ast:go_default_library",
    ],
)
