load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["volatility.go"],
    importpath = "github.com/ZacxDev/zach.finance/api-gateway/internal/volatility",
    visibility = ["//api.zach.finance:__subpackages__"],
    deps = ["//api.zach.finance/api-gateway/internal/model:go_default_library"],
)
